--- a/client/src/styles/Navbar.scss
+++ b/client/src/styles/Navbar.scss
@@ -1,15 +1,15 @@
 .wrapper {
     display: flex;
-    background: red;
     width: 100%;
     height: 50px;
     background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
     align-items: center;
+    position: fixed;
+    top: 0;
 }
 
 .logo_wrapper {
     display: flex;
-    // border: 2px solid green;
     width: 50vw;
 }
 
@@ -20,17 +20,17 @@
     margin-left: 10px;
     padding: 4px;
     background: rgba(0,0,0,0.2);
-    // order: 1;
+    &:hover {
+        background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);;
+        cursor: pointer;
+    }
 }
 
 .registration_wrapper {
     display: flex;
     justify-content: flex-end;
-    // border: 2px solid goldenrod;
     margin-right: 5px;
     width: 50vw;
-    // flex: 1;
-    // order: 2;
 }
 
 .sign_up {
@@ -40,6 +40,11 @@
     margin-right: 5px;
     border-radius: 20px;
     align-self: center;
+    background: red;
+    &:hover {
+        background: orange;
+        cursor: pointer;
+    }
 }
 
 .register {
@@ -49,5 +54,11 @@
     margin-right: 10px;
     border-radius: 20px;
     align-self: center;
+    background: red;
+    &:hover {
+        background: orange;
+        cursor: pointer;
+    }
 }
+
 
