--- a/client/src/styles/Navbar.scss
+++ b/client/src/styles/Navbar.scss
@@ -15,13 +15,15 @@
 
 .logo {
     display: flex;
-    border: 2px solid black;
+    border: 2.5px solid black;
+    font-weight: 600;
     height: 20px;
     margin-left: 10px;
-    padding: 4px;
-    background: rgba(0,0,0,0.2);
+    padding: 5px;
+    background: linear-gradient(90deg,  rgba(252,176,69,1) 0%, rgba(253,29,29,1) 50%, rgba(131,58,180,1) 100%);
+    transition: all 1s;
     &:hover {
-        background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);;
+        background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
         cursor: pointer;
     }
 }
@@ -36,11 +38,13 @@
 .sign_up {
     display: flex;
     border: 2px solid black;
-    padding: 5px;
+    font-weight: 500;
+    padding: 6px;
     margin-right: 5px;
     border-radius: 20px;
     align-self: center;
     background: red;
+    transition: 0.3s;
     &:hover {
         background: orange;
         cursor: pointer;
@@ -50,11 +54,13 @@
 .register {
     display: flex;
     border: 2px solid black;
-    padding: 5px;
+    font-weight: 500;
+    padding: 6px;
     margin-right: 10px;
     border-radius: 20px;
     align-self: center;
     background: red;
+    transition: 0.3s;
     &:hover {
         background: orange;
         cursor: pointer;
