--- a/client/src/styles/Navbar.scss
+++ b/client/src/styles/Navbar.scss
@@ -14,6 +14,7 @@
 }
 
 .logo {
+    color: black;
     display: flex;
     border: 2.5px solid black;
     font-weight: 600;
@@ -21,7 +22,7 @@
     margin-left: 10px;
     padding: 5px;
     background: linear-gradient(90deg,  rgba(252,176,69,1) 0%, rgba(253,29,29,1) 50%, rgba(131,58,180,1) 100%);
-    transition: all 1s;
+    transition: all 3s;
     &:hover {
         background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
         cursor: pointer;
